# typesense-rs

./: .gitignore  Cargo.toml  README.md  flatten.py  generate.sh  generator.patch
typesense/: Cargo.toml  README.md
typesense/.openapi-generator/: FILES
typesense/docs/: CurationApi.md  DocumentsApi.md  FieldEmbedModelConfig.md  KeysApi.md  MultiSearchCollectionParameters.md  MultiSearchResult.md  SearchParameters.md  SearchResultHit.md
typesense/src/: lib.rs
typesense/src/apis/: analytics_api.rs  collections_api.rs  configuration.rs  conversations_api.rs  curation_api.rs  debug_api.rs  documents_api.rs  health_api.rs  keys_api.rs  mod.rs  operations_api.rs  override_api.rs  presets_api.rs  stopwords_api.rs
typesense/src/models/: analytics_event_create_response.rs  analytics_event_create_schema.rs  analytics_rule_delete_response.rs  analytics_rule_parameters.rs  analytics_rule_parameters_destination.rs  analytics_rule_parameters_source.rs  analytics_rule_parameters_source_events_inner.rs  analytics_rule_schema.rs  analytics_rule_upsert_schema.rs  analytics_rules_retrieve_schema.rs  api_key.rs  api_key_schema.rs  api_keys_response.rs  api_response.rs  api_stats_response.rs  collection_alias.rs  collection_alias_schema.rs  collection_aliases_response.rs  collection_response.rs  collection_schema.rs  collection_update_schema.rs  conversation_model_create_schema.rs  conversation_model_schema.rs  conversation_model_update_schema.rs  debug_200_response.rs  delete_documents_200_response.rs  delete_stopwords_set_200_response.rs  dirty_values.rs  drop_tokens_mode.rs  (+46 more)
(+3 files in other folders)
