[package]
name = "typesense-rs"
version = "0.0.0"
authors = ["Troy Benson <troybensonsa@gmail.com>", "OpenAPI Generator team and contributors"]
description = "An open source search engine for building delightful search experiences."
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/TroyKomodo/typesense-rs"
documentation = "https://docs.rs/typesense-rs"
keywords = ["typesense", "search", "api", "client", "openapi"]
categories = ["api-bindings", "database"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
async-trait = "^0.1"
reqwest = { version = "^0.12", features = ["json", "multipart"], default-features = false }
bon = { version = "2.3", optional = true }

[features]
bon = ["dep:bon"]
reqwest-native-tls = ["reqwest/native-tls"]
reqwest-rustls = ["reqwest/rustls-tls"]
